--- a/package.json
+++ b/package.json
@@ -10,30 +10,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.0",
-    "@angular/common": "~13.3.0",
-    "@angular/compiler": "~13.3.0",
-    "@angular/core": "~13.3.0",
-    "@angular/forms": "~13.3.0",
-    "@angular/platform-browser": "~13.3.0",
-    "@angular/platform-browser-dynamic": "~13.3.0",
-    "@angular/router": "~13.3.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "14.1.2",
+    "@angular/cdk": "^14.1.2",
+    "@angular/common": "14.1.2",
+    "@angular/compiler": "14.1.2",
+    "@angular/core": "14.1.2",
+    "@angular/forms": "14.1.2",
+    "@angular/platform-browser": "14.1.2",
+    "@angular/platform-browser-dynamic": "14.1.2",
+    "@angular/router": "14.1.2",
+    "@types/jasminewd2": "^2.0.10",
+    "chart.js": "^3.9.1",
+    "primeflex": "^3.2.1",
+    "primeicons": "^5.0.0",
+    "primeng": "14.0.1",
+    "quill": "^1.3.7",
+    "rxjs": "~7.5.6",
+    "tslib": "^2.4.0",
+    "web-animations-js": "^2.3.2",
+    "zone.js": "~0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.6",
-    "@angular/cli": "~13.3.6",
-    "@angular/compiler-cli": "~13.3.0",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~4.0.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.2"
+    "@angular-devkit/build-angular": "14.1.2",
+    "@angular/cli": "14.1.2",
+    "@angular/compiler-cli": "14.1.2",
+    "@types/jasmine": "~4.0.3",
+    "@types/node": "^18.7.5",
+    "jasmine-core": "~4.3.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.1",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "ts-node": "^10.9.1",
+    "tslint": "^6.1.3",
+    "typescript": "~4.7.4"
   }
 }
