--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,6 @@
             ],
             "styles": [
               "node_modules/font-awesome/css/font-awesome.css",
-              "src/styles.css",
               "node_modules/chart.js/dist/Chart.js",
               "node_modules/ng2-tree/styles.css",
               "node_modules/ngx-ui-switch/ui-switch.component.css",
@@ -33,7 +32,8 @@
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeng/resources/themes/omega/theme.css",
-              "node_modules/ngx-toastr/toastr.css"
+              "node_modules/ngx-toastr/toastr.css",
+              "src/styles.css"
             ],
             "scripts": [
               "./src/html2canvas.1.0.0.rc1fix.js",
